--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -36,3 +36,4 @@ dj-rest-auth = "==5.0.2"
 azure-keyvault-secrets = "~=4.8.0"
 azure-identity = "~=1.16.0"
 cb-privacy-policy = {editable = true, path = "./modules/privacy_policy"}
+cb-terms-and-conditions = {editable = true, path = "./modules/terms_and_conditions"}
