--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -38,3 +38,4 @@ azure-identity = "~=1.16.0"
 cb-privacy-policy = {editable = true, path = "./modules/privacy_policy"}
 cb-terms-and-conditions = {editable = true, path = "./modules/terms_and_conditions"}
 cb-django-calendly = {editable = true, path = "./modules/django_calendly"}
+cb-django-core = {editable = true, path = "./modules/django_core"}
