--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/polyfill": "^7.12.1",
     "@modules/faq": "file:./modules/faq",
     "@modules/privacy-policy": "file:./modules/privacy-policy",
+    "@modules/push-notifications": "file:./modules/push-notifications/",
     "@modules/terms-and-conditions": "file:./modules/terms-and-conditions",
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/native": "^6.1.6",
@@ -28,6 +29,7 @@
     "react-native-dotenv": "^3.4.8",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.10.0",
+    "react-native-onesignal": "^4.0.3",
     "react-native-paper": "^5.9.1",
     "react-native-radio-buttons-group": "^2.3.2",
     "react-native-reanimated": "~2.14.0",
