--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@modules/onboarding": "file:./modules/onboarding/",
     "@modules/photo-editing": "file:./modules/photo-editing/",
     "@modules/privacy-policy": "file:./modules/privacy-policy",
+    "@modules/privacy-policy-webview": "file:./modules/privacy-policy-webview/",
     "@modules/push-notifications": "file:./modules/push-notifications/",
     "@modules/social-login": "file:./modules/social-login/",
     "@modules/splash": "file:./modules/splash/",
